# hook-relay

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/grafana/dashboards/: hookrelay.json
infra/grafana/provisioning/dashboards/: hookrelay.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
src/hookrelay/: __init__.py  cli.py  config.py  main.py  metrics.py  worker_cli.py
src/hookrelay/api/: __init__.py  dependencies.py
src/hookrelay/api/routers/: dlq.py  endpoints.py  events.py
src/hookrelay/api/schemas/: dlq.py  endpoints.py  events.py
src/hookrelay/db/: __init__.py  engine.py  models.py  session.py
src/hookrelay/kafka/: __init__.py  consumer.py  producer.py
src/hookrelay/migrations/: env.py  script.py.mako
src/hookrelay/migrations/versions/: bab799a27da3_initial.py
src/hookrelay/worker/: __init__.py  delivery.py  dlq.py  lag_reporter.py  outbox.py  retry.py  scheduler.py
tests/: conftest.py
tests/integration/: conftest.py  test_delivery_worker.py  test_dlq.py  test_end_to_end.py  test_endpoints.py  test_events.py  test_placeholder.py  test_retry_scheduler.py
tests/unit/: test_delivery.py  test_outbox.py  test_placeholder.py  test_worker_cli.py
