[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hookrelay"
version = "0.1.0"
description = "Self-hosted webhook delivery engine built for reliability"
license = { text = "MIT" }
authors = [{ name = "rezilobz", email = "rezi.lobzhanidze@gmail.com" }]
requires-python = ">=3.12"
keywords = ["webhooks", "kafka", "delivery", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
]
dependencies = [
    "aiokafka>=0.14.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
hookrelay = "hookrelay.cli:main"
hookrelay-worker = "hookrelay.worker_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hookrelay"]

# ─── Dependency groups (dev-only, not published as package extras) ────────────

[dependency-groups]
test = [
    "anyio[trio]>=4.13.0",
    "factory-boy>=3.3.3",
    "faker>=40.15.0",
    "fakeredis[lua]>=2.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "testcontainers[kafka,postgres]>=4.14.2",
]
lint = [
    "mypy>=2.0.0",
    "ruff>=0.15.12",
    "sqlalchemy[mypy]>=2.0.49",
    "types-passlib>=1.7.7.20260211",
]
dev = [
    "ipython>=9.13.0",
    "pre-commit>=4.6.0",
    "watchfiles>=1.1.1",
]

# ─── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
"src/hookrelay/migrations/**/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hookrelay"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ─── mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiokafka.*", "prometheus_client.*"]
ignore_missing_imports = true

# ─── pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--strict-markers", "--strict-config", "-ra"]
markers = [
    "integration: marks tests that require live infrastructure (deselect with -m 'not integration')",
    "slow: marks tests that are slow to run",
]

# ─── coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/hookrelay"]
core = "sysmon"
omit = ["src/hookrelay/migrations/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
